Added gradle build and fixed compiler errors